--- a/blog/templates/posts/edit.html
+++ b/blog/templates/posts/edit.html
@@ -29,6 +29,8 @@
           Create Post
         {% endif %}
       </legend>
+      <input type="hidden" name="token" value="{{ session["token"] }}">
+
       <div class="control-group">
         <label class="control-label" for="title">Title:</label>
         <div class="controls">
